# prompt-media-workflow

./: .agents.md  .gitignore  AGENTS.md  README.md  capabilities.md  evaluation.md  internal-config.md  local-stack.md  project-agents.md  project-skills.md  pyproject.toml  roadmap.md  schemas.md  spec.md  tool-contracts.md  workflow-roles.md
.agents/skills/workflow-implementer/: SKILL.md
.codex/: README.md  config.toml
.codex/agents/: critic.toml  shot_planner.toml
config/: internal.json
src/prompt_media_workflow/: __init__.py  ai_models.py  cli.py  config.py  models.py  openai_client.py  storage.py
src/prompt_media_workflow/generators/: comfyui.py  openai_images.py
src/prompt_media_workflow/orchestrator/: __init__.py  runner.py
src/prompt_media_workflow/stages/: __init__.py  brief_building.py  clarification.py  critic.py  generation.py  prompt_analysis.py  refiner.py  shot_planning.py
src/prompt_media_workflow/tools/: __init__.py  generate_image_candidates.py  persistence.py
