[project]
name = "prompt-media-workflow"
version = "0.1.0"
description = "Prompt-to-media workflow prototype"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.99.0,<2",
  "pydantic>=2.8,<3",
  "requests>=2.31.0,<3",
]

[project.scripts]
pmw = "prompt_media_workflow.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
